force-app/main/default/objects/Dealer__c/fields/Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Mobile_No__c</fullName>
    <inlineHelpText>10 Digits number.</inlineHelpText>
    <label>Alternate Mobile No.</label>
    <type>Phone</type>
</CustomField>