force-app/main/default/objects/Dealer__c/fields/Cluster_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Sales_Manager__c</fullName>
    <formula>Employee_Names__r.Cluster_Sales_Manager__r.Name</formula>
    <label>Cluster Sales Manager</label>
    <type>Text</type>
</CustomField>