force-app/main/default/objects/Dealer__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Credit limit for dealer - usually used for direct dealers (otherwise distributor is given total credit limit to be used across their dealers)</description>
    <inlineHelpText>For Direct Dealers</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>