force-app/main/default/objects/Dealer__c/fields/Current_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Achievement__c</fullName>
    <label>Current Month Achievement</label>
    <summarizedField>Dealer_with_Tehsil__c.This_Month_Achievement__c</summarizedField>
    <summaryForeignKey>Dealer_with_Tehsil__c.Dealer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>