force-app/main/default/objects/Dealer__c/fields/Current_Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Month Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>