force-app/main/default/objects/Dealer__c/fields/Dealer_Address__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Address__c</fullName>
    <label>Dealer Address</label>
    <type>TextArea</type>
</CustomField>