force-app/main/default/objects/Dealer__c/fields/Dealer_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact_Person__c</fullName>
    <label>Dealer Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>