force-app/main/default/objects/Dealer__c/fields/Dealer_Email__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Email__c</fullName>
    <label>Dealer Email</label>
    <type>Email</type>
</CustomField>