force-app/main/default/objects/Dealer__c/fields/Dealer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Mobile__c</fullName>
    <inlineHelpText>10 Digits Mobile Number</inlineHelpText>
    <label>Dealer Mobile</label>
    <type>Phone</type>
</CustomField>