force-app/main/default/objects/Dealer__c/fields/Emp_Name__c.field-meta.xml
<CustomField>
    <fullName>Emp_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emp Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>