force-app/main/default/objects/Dealer__c/fields/Employee_Names__c.field-meta.xml
<CustomField>
    <fullName>Employee_Names__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Dealers</relationshipLabel>
    <relationshipName>Dealers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>