force-app/main/default/objects/Dealer__c/fields/Last_Three_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Last_Three_Month_Achievement__c</fullName>
    <label>Last Three Month Achievement</label>
    <summarizedField>Dealer_with_Tehsil__c.Last_Three_Month_Achievement__c</summarizedField>
    <summaryForeignKey>Dealer_with_Tehsil__c.Dealer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>