force-app/main/default/objects/Dealer__c/fields/Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>