force-app/main/default/objects/Dealer__c/fields/Tehsil__c.field-meta.xml
<CustomField>
    <fullName>Tehsil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tehsil</label>
    <referenceTo>Tehsil__c</referenceTo>
    <relationshipLabel>Dealers</relationshipLabel>
    <relationshipName>Dealers</relationshipName>
    <type>Lookup</type>
</CustomField>