force-app/main/default/objects/Dealer__c/fields/Three_Month_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Three_Month_Achievement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Three Month Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>