force-app/main/default/objects/Dealer__c/fields/Three_Months_Target__c.field-meta.xml
<CustomField>
    <fullName>Three_Months_Target__c</fullName>
    <formula>Monthly_Target__c *3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Three Months Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>