force-app/main/default/objects/Dealer__c/validationRules/Dealer_Mobile_10_Digits_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_Mobile_10_Digits_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(  Dealer_Mobile__c  )),OR(NOT(LEN(  Dealer_Mobile__c  ) = 10),CONTAINS(  Dealer_Mobile__c ,&apos;.&apos;),NOT(ISNUMBER(  Dealer_Mobile__c  ))),false)</errorConditionFormula>
    <errorMessage>Mobile Number Should be 10 Digits</errorMessage>
</ValidationRule>