force-app/main/default/objects/Dealer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distributor__c</columns>
    <columns>Dealer_Mobile__c</columns>
    <columns>Alternate_Mobile_No__c</columns>
    <columns>Active__c</columns>
    <columns>Emp_Name__c</columns>
    <columns>Dealer_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>